@@ -351,7 +351,9 @@ since it could result in memory overflow and make Emacs crash."
 	     ;; xterm.c
 	     (x-use-underline-position-properties display boolean "22.1")
 	     (x-underline-at-descent-line display boolean "22.1")
-	     (x-stretch-cursor display boolean "21.1")))
+	     (x-stretch-cursor display boolean "21.1")
+	     ;; xsettings.c
+	     (font-use-system-font font-selection boolean "23.2")))
       this symbol group type standard version native-p
       ;; This function turns a value
       ;; into an expression which produces that value.
